# Inference_demo

./: CMakeLists.txt  README.md  main.cpp  train_model.py
cppflow/include/: Model.h  Tensor.h
cppflow/src/: Model.cpp  Tensor.cpp
libtensorflow_gpu_c/: THIRD_PARTY_TF_C_LICENSES
